# drust

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh.md  askama.toml  build.rs  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release-cli.yml  release-image.yml
build_support/: ui_gates.rs
cli/: Cargo.toml  install.sh
cli/src/: auth.rs  cli.rs  ctx.rs  lib.rs  main.rs
cli/src/auth/: device.rs  mod.rs
cli/src/client/: error.rs  http.rs  mcp.rs  mod.rs
cli/src/commands/: collections.rs  files.rs  functions.rs  mod.rs  query.rs  records.rs  rpc.rs  search.rs  tenant_admin.rs  use_ctx.rs
cli/src/commands/admin/: audit.rs  backups.rs  keys.rs  mod.rs  team.rs  tenants.rs
cli/src/config/: hosts.rs  mod.rs  store.rs
cli/src/output/: mod.rs
cli/tests/: admin_audit_cmd.rs  admin_backups_cmd.rs  admin_keys_cmd.rs  admin_smoke.rs  admin_team_cli_cmd.rs  admin_tenants_cmd.rs  auth_cmd.rs  auth_device_cmd.rs  client_http.rs  collections_cmd.rs  collections_setcaps.rs  e2e_smoke.rs  files_cmd.rs  functions_cmd.rs  query_search_rpc_cmd.rs  records_cmd.rs  tenant_admin_cmd.rs  use_cmd.rs
deploy/: Caddyfile  compose.Caddyfile  drust-backup.service  drust-backup.sh  drust-backup.timer  drust-janitor.service  drust-janitor.sh  drust-janitor.timer  drust.service  logrotate-drust
deploy/helm/drust/: Chart.yaml  README.md  values.yaml
docs/: architecture.md  gen-architecture.py  gen-architecture.sh  oauth-setup.md
docs/migration/: list-filter.md
docs/superpowers/notes/: 2026-05-22-drust-i18n-progress.md
eval/mcp_onboarding/: README.md  requirements.txt
eval/mcp_onboarding/mcp_onboarding/: __init__.py  agent.py  drust_admin.py  runner.py  scorer.py  tasks.py
eval/mcp_onboarding/tests/: test_scorer.py
locales/: en.toml  zh-TW.toml
sdk/edge-function-template/: Cargo.toml  README.md
sdk/edge-function-template/src/: lib.rs
sdk/edge-function-template/wit/: world.wit
src/: base_path.rs  bin_helpers.rs  config.rs  error.rs  lib.rs  main.rs
src/auth/: admin.rs  admin_token.rs  bearer.rs  middleware.rs  mod.rs  oauth_sentinel.rs  profile.rs  session.rs  user.rs  user_session.rs
src/codegen/: filter_ast_schema.rs  handlers.rs  ir.rs  mod.rs  openapi.rs  typescript.rs  zod.rs
src/cron/: index.rs  mod.rs  ops.rs  routes.rs  schedule.rs  scheduler.rs  store.rs
src/db/: migrations.rs
src/functions/: bindings.rs  caller.rs  dispatcher.rs  enforce.rs  executor.rs  invoke_gate.rs  mod.rs  routes.rs  runtime.rs  schema.rs
src/mcp/: handler.rs  http_registry.rs  mod.rs  server.rs
src/mcp/tools/: audit.rs  cron.rs  exploration.rs  files.rs  functions.rs  index.rs  mod.rs  oauth.rs  owner_field.rs  policy.rs  read.rs  realtime.rs  schema.rs  user.rs  vector.rs  webhook.rs  write.rs
src/mgmt/: admin_mcp_pat.rs  admin_pat.rs  admin_profile.rs  admin_rooms.rs  admin_team.rs  admin_tokens.rs  audit.rs  backups.rs  browse.rs  cli_device.rs  collection_list.rs  cron_admin.rs  docs.rs  format.rs  functions_admin.rs  i18n.rs  locale_layer.rs  metrics.rs  mod.rs  oauth_clients_admin.rs  oauth_janitor.rs  oauth_login.rs  public_files.rs  routes.rs  rpc_admin.rs  script_json.rs  signed_bytes.rs  stats.rs  svg_charts.rs  tenant_broadcast.rs  tenant_files.rs  tenant_settings.rs  tenants.rs  theme.rs  theme_layer.rs  tokens.rs
src/mgmt/oauth_server/: authorize.rs  metadata.rs  mod.rs  pkce.rs  register.rs  return_url.rs  storage.rs  token.rs
src/mgmt/templates/: _admin_sidebar.html  _audit_body.html  _audit_charts.html  _base.html  _cmdk.html  _collection_sidebar.html  _favicon.html  _icons.html  _mascot.html  _modal.html  _styles.html  _tenant_eyebrow.html  _theme_palette.html  _topbar_right.html  _ui.html  admin_oauth_clients.html  admin_team.html  admin_tokens.html  audit_host.html  design.html  (+27 more)
src/oauth/: config.rs  github.rs  google.rs  mod.rs  provider.rs  state.rs
src/query/: authorizer.rs  executor.rs  filter.rs  list_builder.rs  mod.rs  policy.rs  vector_codec.rs  vector_filter.rs
src/rpc/: exec_write.rs  handler.rs  mod.rs  params.rs  prepare.rs  registry.rs
src/safety/: audit.rs  audit_db.rs  error_fixes.rs  ip.rs  mod.rs  rate_limit.rs  rate_limit_ip.rs  recent_writes.rs
src/storage/: blast_radius.rs  disk.rs  files.rs  garage.rs  janitor.rs  meta.rs  mod.rs  pool.rs  quota.rs  record_history.rs  schema.rs  schema_cache.rs  signed_url.rs  tenant_db.rs  visibility.rs
src/tenant/: admin_user_routes.rs  auth_cache.rs  auth_routes.rs  collections.rs  egress.rs  egress_config.rs  events.rs  file_caps.rs  mcp_dispatch.rs  mod.rs  oauth_admin_routes.rs  oauth_config.rs  oauth_metadata.rs  oauth_routes.rs  owner_field.rs  policy_routes.rs  query_endpoint.rs  realtime_routes.rs  records.rs  records_list.rs  router.rs  sse.rs  vector_search.rs  webhook_dispatcher.rs  webhook_resolver.rs  webhook_routes.rs
tests/: admin_api_audit.rs  admin_api_backups.rs  admin_api_tenants.rs  admin_api_tokens.rs  admin_broadcast_page.rs  admin_cap_switch_toggle.rs  admin_description_write.rs  admin_email_migration.rs  admin_files_routes.rs  admin_files_upgrade.rs  admin_index_routes.rs  admin_login_rate_limit.rs  admin_login_timing.rs  admin_mcp_pat.rs  admin_metrics.rs  admin_oauth.rs  admin_oauth_provider_handlers.rs  admin_password.rs  admin_pat_admin_plane.rs  admin_pat_bearer.rs  admin_pat_mint.rs  admin_pat_reroll.rs  admin_pat_reroll_keeps_cli.rs  admin_policy_routes.rs  admin_relocated_pages_smoke.rs  admin_session_pat_fallback.rs  admin_team_crud.rs  admin_team_invariants.rs  admin_theme.rs  admin_users.rs  admin_webhook_handlers.rs  audit3_readscope_all_caps.rs  audit3_sse_evict.rs  audit_chart_render.rs  audit_log.rs  audit_middleware.rs  audit_sqlite.rs  audit_ui_routes.rs  auth_admin_ui.rs  auth_audit.rs  (+177 more)
tests/common/: mock_garage_admin.rs  mod.rs  oauth_helpers.rs
tests/webhooks_common/: mod.rs
themes/: cozy-dark.toml  soft-light.toml  system.toml
(+49 files in other folders)
