[package]
name = "drust"
version = "1.1.0"
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "drust"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "process"] }
axum               = { version = "0.8", features = ["macros"] }
tower-http         = { version = "0.6", features = ["trace", "cors", "set-header"] }
rmcp               = { version = "0.4", features = ["server", "transport-streamable-http-server", "transport-worker"] }
rusqlite           = { version = "0.32", features = ["bundled", "hooks"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
askama             = { version = "0.12", features = ["with-axum"] }
askama_axum        = "0.4"
argon2             = "0.5"
subtle             = "2"
sha2               = "0.10"
base64             = "0.22"
rand               = "0.8"
uuid               = { version = "1", features = ["v4", "fast-rng"] }
dashmap            = "6"
chrono             = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow             = "1"
thiserror          = "2"
axum-extra         = { version = "0.10", features = ["cookie", "cookie-signed"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
futures            = "0.3"
urlencoding        = "2"

[dev-dependencies]
tempfile           = "3"
serial_test        = "3"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio              = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tower              = { version = "0.5", features = ["util"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
