[package]
name = "drust"
version = "1.31.6"
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "drust"
path = "src/main.rs"

[[bin]]
name = "drust_session_janitor"
path = "src/bin/drust_session_janitor.rs"

[[bin]]
name = "set_admin_role"
path = "src/bin/set_admin_role.rs"

[dependencies]
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "process"] }
axum               = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower-http         = { version = "0.6", features = ["trace", "cors", "set-header"] }
rmcp               = { version = "1.5", features = ["server", "transport-streamable-http-server", "transport-worker"] }
schemars           = "1"
tower              = { version = "0.5", features = ["util"] }
rusqlite           = { version = "0.32", features = ["bundled", "hooks"] }
sqlite-vec         = "0.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
askama             = { version = "0.12", features = ["with-axum"] }
askama_axum        = "0.4"
argon2             = "0.5"
subtle             = "2"
sha2               = "0.10"
hmac               = "0.12"
base64             = "0.22"
rand               = "0.8"
uuid               = { version = "1", features = ["v4", "fast-rng"] }
dashmap            = "6"
nix                = { version = "0.29", features = ["fs"] }
chrono             = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml               = "0.8"
anyhow             = "1"
thiserror          = "2"
axum-extra         = { version = "0.10", features = ["cookie", "cookie-signed", "form"] }
cookie             = "0.18"
tokio-stream       = { version = "0.1", features = ["sync"] }
tokio-util         = { version = "0.7", features = ["io"] }
futures            = "0.3"
urlencoding        = "2"
object_store       = { version = "0.11", features = ["aws"] }
mime_guess         = "2"
bytes              = "1"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
pulldown-cmark     = { version = "0.12", default-features = false, features = ["html"] }
flate2             = { version = "1", default-features = false, features = ["rust_backend"] }
tar                = { version = "0.4", default-features = false }
zstd               = { version = "0.13", default-features = false }
tempfile           = "3"

[dev-dependencies]
serial_test        = "3"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"
serde_urlencoded   = "0.7"
tokio-test         = "0.4"
tokio-tungstenite  = "0.24"
futures-util       = "0.3"

[build-dependencies]
toml       = "0.8"
regex-lite = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
