[package]
name = "drust-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lib]
name = "drust_cli"
path = "src/lib.rs"

[[bin]]
name = "drust"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive", "env"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["preserve_order"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
keyring     = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
directories = "5"
toml        = "0.8"
anyhow      = "1"
open        = "5"

[dev-dependencies]
wiremock   = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
